--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -5,11 +5,19 @@ body {
 
 main {
   display: flex;
-  justify-content: center;
+  flex-flow: column wrap;
 }
 
 h1 {
   font-size: 5rem;
   font-weight: 400;
   font-style: italic;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  li {
+    list-style: none;
+  }
 }
