--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -6,6 +6,8 @@ body {
 main {
   display: flex;
   flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
@@ -19,5 +21,13 @@ ul {
   padding: 0;
   li {
     list-style: none;
+    display: inline-block;
   }
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  font-size: 1.75rem;
+  font-style: italic;
 }
