--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -22,6 +22,7 @@ ul {
   li {
     list-style: none;
     display: inline-block;
+    padding: 0 7.2rem 0 7.2rem;
   }
 }
 
@@ -30,4 +31,13 @@ a {
   color: black;
   font-size: 1.75rem;
   font-style: italic;
+}
+
+#content { 
+  
+  h1 {
+    color: black;
+    font-size: 1.75rem;
+    font-style: italic;
+  }
 }
