--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,14 +1,11 @@
 body {
-  background-color: $p-color;
+  margin: 8%;
+  background-image: url('assets/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-main {
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: center;
-  align-items: center;
-  margin: 10% 2% 0 2%;
+  color: white;
 }
 
 img {
@@ -24,11 +21,6 @@ h1 {
   font-size: 5rem;
   font-weight: 400;
   font-style: italic;
-  margin: 15% 0 10% 0;;
-}
-
-#menu {
-  margin-bottom: 8%;
 }
 
 ul {
@@ -43,7 +35,7 @@ ul {
 
 a {
   text-decoration: none;
-  color: black;
+  color: white;
   font-size: 1.75rem;
   font-style: italic;
 }
@@ -58,12 +50,4 @@ a {
 
 .link-3:hover {
   color: #0632ff;
-}
-
-#content { 
-  
-  h1 {
-    font-size: 1.75rem;
-    font-style: italic;
-  }
 }
