--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 @charset 'utf-8';
 
-@import 'vars';
+
 @import 'components';
-@import 'changescene';
+@import 'sections';
+@import 'grid';
 @import 'animation';
