--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,5 +1,5 @@
 body {
-  margin: 8%;
+  margin-top: 8%;
   background-image: url('assets/bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
