--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,4 +1,4 @@
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
   h1 {
     font-size: 3rem;
   }
@@ -13,9 +13,9 @@
   }
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
   img {
-    max-width: 30%
+    max-width: 30%;
   }
   h1 {
     font-size: 2.1rem;
@@ -29,9 +29,15 @@
   #menu {
     margin-bottom: 0;
   }
+  .tour-container {
+    font-size: 0.8rem;
+    a {
+      font-size: 0.8rem;
+    }
+  }
 }
 
-@media only screen and (max-device-height : 568px) {
+@media only screen and (max-device-height: 568px) {
   h1 {
     font-size: 2rem;
   }
@@ -44,4 +50,10 @@
   #menu {
     margin-bottom: 0;
   }
-} 
+  .tour-container {
+    font-size: 0.8rem;
+    a {
+      font-size: 0.8rem;
+    }
+  }
+}
