--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,5 +1,5 @@
 body {
-  margin-top: 8%;
+  margin: 8% 0 2.5% 0;
   background-image: url('assets/bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -21,6 +21,7 @@ h1 {
   font-size: 5rem;
   font-weight: 400;
   font-style: italic;
+  margin: 0.8rem 0 0.8rem;
 }
 
 ul {
