--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -2,13 +2,14 @@ main {
   display: grid;
   grid: repeat(4, 1fr) / 1fr;
   place-items: center center;
+  min-height: 100vh;
 }
 
 .tour-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
-  grid-row-gap: 2%;
+  grid-row-gap: 5%;
   place-items: center;
 
   a {
