--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -9,6 +9,7 @@
     font-size: 1.2rem;
   }
   #menu {
+    align-self: start;
     margin-bottom: 0;
   }
 }
@@ -27,6 +28,7 @@
     font-size: 1rem;
   }
   #menu {
+    align-self: start;
     margin-bottom: 0;
   }
   .tour-container {
