--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -8,7 +8,7 @@ main {
 .tour-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   grid-row-gap: 5%;
   place-items: center;
 
